fixed alignment issues

--- a/src/Pay.css
+++ b/src/Pay.css
@@ -495,7 +495,7 @@
   }
   .planet-image {
     width: 65%;
-    bottom: 10% !important;
+    bottom: 15% !important;
   }
   .planet-1,
   .planet-2,
